# AGRC-Surrogate

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
agrc_surrogate/: c81_app.py  cli.py  opt_api.py  predict_360_pt3_pt6.py  predict_360_pt3_pt8.py  streamlit_c81_app.py  streamlit_c81_app_original.py
agrc_surrogate/assets/models/: Forward_pt3_non_opt_hyp_v2.h5  Forward_pt4_non_opt_hyp_v2.h5  Forward_pt5_non_opt_hyp_v2.h5  Forward_pt6_non_opt_hyp_v2.h5  Forward_pt8_non_opt_hyp_v2.h5
agrc_surrogate/assets/preprocess/: CST_upp_low_560.csv  CST_upp_low_560_v2.csv  Cl_parsed.csv  Cm_parsed.csv  pca_cd_pt4_v2.pkl  pca_cd_pt6.pkl  pca_cd_pt7.pkl  pca_cd_pt8_v2.pkl  pca_cl_pt3_v2.pkl  pca_cl_pt4_v2.pkl  pca_cl_pt5.pkl  pca_cl_pt5_v2.pkl  pca_cl_pt6.pkl  pca_cl_pt6_v2.pkl  pca_cl_pt8_v2.pkl  pca_cm_pt3.pkl  pca_cm_pt5.pkl  pca_cm_pt5_v2.pkl  (+24 more)
agrc_surrogate/python_scripts/: predict_360_pt3.py
examples/: ga_optimize_sc1095.py
models/: Forward_pt7_non_opt_hyp_v2.h5
preprocess/: Cd_parsed.csv  pca_cd_pt3.pkl  pca_cd_pt3_v2.pkl  pca_cd_pt4.pkl  pca_cd_pt5.pkl  pca_cd_pt5_v2.pkl  pca_cd_pt6_v2.pkl  pca_cl_pt3.pkl  pca_cl_pt4.pkl  pca_cl_pt7_v2.pkl  pca_cm_pt3_v2.pkl  pca_cm_pt4.pkl  pca_cm_pt4_v2.pkl  pca_cm_pt6.pkl  scaler_cd_pt3.pkl  scaler_cd_pt4.pkl  scaler_cd_pt4_v2.pkl  scaler_cd_pt5_v2.pkl  scaler_cd_pt6.pkl  scaler_cl_pt4_v2.pkl  scaler_cl_pt6.pkl  scaler_cl_pt6_v2.pkl  scaler_cl_pt7_v2.pkl  scaler_cm_pt5.pkl  scaler_cm_pt6_v2.pkl
python_scripts/: predict_360_pt4.py  predict_360_pt5.py  predict_360_pt6.py  predict_360_pt7.py
