[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrc-surrogate"
version = "0.1.0"
description = "Generate C81 aerodynamic tables from airfoil geometry using AGRC surrogate models"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "joblib",
  "tensorflow",
  "matplotlib",
  "scikit-learn==1.6.1"
]

[project.scripts]
agrc-c81 = "agrc_surrogate.predict_360_pt3_pt8:main"

[project.optional-dependencies]
opt = ["deap"]

[tool.setuptools]
packages = ["agrc_surrogate"]

[tool.setuptools.package-data]
agrc_surrogate = [
  "assets/models/*.h5",
  "assets/preprocess/*.pkl",
  "assets/data/*.dat"
]

